# typozap

./: .gitignore  LICENSE  Modelfile  PACKAGING.md  README.md  build.bat  build_macos.sh  clipboard_transaction.py  corrector.py  create_icon.py  engine.py  model_installer.py  platform_support.py  pyproject.toml  requirements.txt  start.bat  typozap.py  typozap.spec  typozap_standalone.py
.github/release-notes/: v1.2.0.md  v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.1.0.md
.github/workflows/: release.yml  tests.yml
docs/: PACKAGING.md
installer/windows/: TypoZap.iss
models/: Modelfile
packaging/: typozap.spec
packaging/windows/: TypoZap.iss
scripts/: build_macos.sh  build_windows.bat  create_icon.py  download_windows_runtime.ps1  start_windows.bat
src/typozap/: __init__.py  __main__.py  app.py  clipboard.py  correctors.py  engine.py  features.py  model_installer.py  platform.py  selection_effect.py
tests/: test_clipboard_transaction.py  test_corrector.py  test_features.py  test_llama_corrector.py  test_model_acceptance.py  test_model_installer.py  test_platform_support.py  test_selection_effect.py  test_ui.py
